--- a/contact.html
+++ b/contact.html
@@ -78,36 +78,35 @@
 
         <div class="row">
           <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
-            <form action="https://formspree.io/f/mgeravbn" method="POST" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/mgeravbn" method="POST" class="php-email-form">
               <div class="row">
-
                 <div class="col-md-6 form-group">
                   <label for="name">Name</label>
-                  <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" />
                   <!-- <div class="validate"></div> -->
                 </div>
                 <div class="col-md-6 form-group">
                   <label for="name">Email</label>
-                  <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" />
                   <!-- <div class="validate"></div> -->
                 </div>
                 <div class="col-md-12 form-group">
                   <label for="name">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <input type="text" class="form-control" name="subject" id="subject"  />
                   <!-- <div class="validate"></div> -->
                 </div>
                 <div class="col-md-12 form-group">
                   <label for="name">Message</label>
-                  <textarea class="form-control" name="message" cols="30" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
+                  <textarea class="form-control" name="message"></textarea>
                   <!-- <div class="validate"></div> -->
                 </div>
 
-
+<!-- 
                 <div class="col-md-12 mb-3">
                     <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
+                </div> -->
 
                 <div class="col-md-6 form-group">
                   <input type="submit" class="readmore d-block w-100">
