--- a/collaboratory-online.html
+++ b/collaboratory-online.html
@@ -83,6 +83,7 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <img src="img/collaboratory-cover.png" alt="Image" class="img-fluid">
+              <img src="img/collaboratory-layout.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -110,7 +111,7 @@
                   <li>Heroku</li>
                 </ul>
 
-                <p><a href="#" class="readmore">View Demo Video</a></p>
+                <p><a href="https://www.youtube.com/embed/p73JU_cEqLE" class="readmore">View Demo Video</a></p>
               </div>
             </div>
           </div>
@@ -142,7 +143,7 @@
                   <h3>Flo Redesign</h3>
                   <span>Mobile</span>
                 </div>
-                <img class="img-fluid" src="img/img_2.jpg">
+                <img class="img-fluid" src="img/flo-onboarding.png">
               </a>
             </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -151,25 +152,7 @@
                   <h3>Collaboratory Online</h3>
                   <span>Web</span>
                 </div>
-                <img class="img-fluid" src="img/img_3.jpg">
-              </a>
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="mooma-wayfinding.html" class="item-wrap fancybox">
-                <div class="work-info">
-                  <h3>MoOMA Wayfinding System</h3>
-                  <span>Design</span>
-                </div>
-                <img class="img-fluid" src="img/img_4.jpg">
-              </a>
-            </div>
-            <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="geons-weather-app.html" class="item-wrap fancybox">
-                <div class="work-info">
-                  <h3>Minimal Weather App</h3>
-                  <span>Mobile</span>
-                </div>
-                <img class="img-fluid" src="img/img_5.jpg">
+                <img class="img-fluid" src="img/collaboratory-cover.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -178,7 +161,16 @@
                   <h3>Intestina</h3>
                   <span>Branding</span>
                 </div>
-                <img class="img-fluid" src="img/img_6.jpg">
+                <img class="img-fluid" src="img/intestina-screens-4.png">
+              </a>
+            </div>
+            <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="geons-weather-app.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Minimal Weather App</h3>
+                  <span>Mobile</span>
+                </div>
+                <img class="img-fluid" src="img/minimal-cover.png">
               </a>
             </div>
           </div>
