--- a/geons-weather-app.html
+++ b/geons-weather-app.html
@@ -134,7 +134,7 @@
                   <h3>Flo Redesign</h3>
                   <span>Mobile</span>
                 </div>
-                <img class="img-fluid" src="img/img_2.jpg">
+                <img class="img-fluid" src="img/flo-onboarding.png">
               </a>
             </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -143,25 +143,7 @@
                   <h3>Collaboratory Online</h3>
                   <span>Web</span>
                 </div>
-                <img class="img-fluid" src="img/img_3.jpg">
-              </a>
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="mooma-wayfinding.html" class="item-wrap fancybox">
-                <div class="work-info">
-                  <h3>MoOMA Wayfinding System</h3>
-                  <span>Design</span>
-                </div>
-                <img class="img-fluid" src="img/img_4.jpg">
-              </a>
-            </div>
-            <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="geons-weather-app.html" class="item-wrap fancybox">
-                <div class="work-info">
-                  <h3>Minimal Weather App</h3>
-                  <span>Mobile</span>
-                </div>
-                <img class="img-fluid" src="img/img_5.jpg">
+                <img class="img-fluid" src="img/collaboratory-cover.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -170,7 +152,16 @@
                   <h3>Intestina</h3>
                   <span>Branding</span>
                 </div>
-                <img class="img-fluid" src="img/img_6.jpg">
+                <img class="img-fluid" src="img/intestina-screens-4.png">
+              </a>
+            </div>
+            <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="geons-weather-app.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Minimal Weather App</h3>
+                  <span>Mobile</span>
+                </div>
+                <img class="img-fluid" src="img/minimal-cover.png">
               </a>
             </div>
           </div>
