--- a/index.html
+++ b/index.html
@@ -116,22 +116,13 @@
               <img class="img-fluid" src="img/collaboratory-cover.png">
             </a>
           </div>
-          <!-- <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="mooma-wayfinding.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>MoOMA Wayfinding System</h3>
-                <span>Design</span>
-              </div>
-              <img class="img-fluid" src="img/img_4.jpg">
-            </a>
-          </div> -->
           <div class="item branding col-md-12 col-lg-6 mb-4 mb-lg-0">
             <a href="intestina.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intestina</h3>
                 <span>Branding</span>
               </div>
-              <img class="img-fluid" src="img/img_6.jpg">
+              <img src="img/intestina-screens-4.png" alt="intestina cover" class="img-fluid">
             </a>
           </div>
           <div class="item mobile col-md-12 col-lg-6 mb-4 mb-lg-0">
